<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPasswordActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="181dp"
        android:layout_height="33dp"
        android:text="@string/forgot_password_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/forgot_password_constraintLayout"
        android:layout_width="299dp"
        android:layout_height="108dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_SendPasswordReset_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="224dp"
            android:layout_height="46dp"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/forgot_password_SendPasswordReset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_password_reset"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>