<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logInActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.LogInActivity">


    <Button
        android:id="@+id/log_in_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_LinearLayout"
        app:layout_constraintVertical_bias="0.042" />

    <FrameLayout
        android:id="@+id/log_in_frame_layout"
        android:layout_width="224dp"
        android:layout_height="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/log_in_image_view"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/vintage_cycle_image"
            app:srcCompat="@mipmap/app_icon_round" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/log_in_LinearLayout"
        android:layout_width="356dp"
        android:layout_height="241dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_frame_layout">

        <EditText
            android:id="@+id/log_in_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/log_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/indigo"
            android:textColorHint="#757575"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/log_in_clickForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/forgot_password" />

    </LinearLayout>

    <Button
        android:id="@+id/log_in_buttonCreateAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>