...
    <string name="profile_details">Profile Details</string>
    <string name="update_profile">Save</string>
    <string name="profile_updated">Profile updated successfully</string>

    <!-- Forgot password -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="send_password_reset">Send Password Reset</string>
    <string name="enter_email_forgot_password">Please enter your email</string>

    <!-- View models -->
    <string name="location">Current Location</string>
    <string name="black">black</string>
    <string name="my_marker">myMarker</string>
...
