<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.SignUpActivity">

    <TextView
        android:id="@+id/sign_up_create_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/indigo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_LinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_LinearLayout"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/sign_up_LinearLayout"
        android:layout_width="353dp"
        android:layout_height="448dp"
        android:layout_marginBottom="156dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/sign_up_edit_user_details_firstName"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/f_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/sign_up_edit_user_details_lastName"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/l_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/sign_up_change_email"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/sign_up_confirmPassword"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAlignment="viewStart"
            android:textColor="@color/indigo"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>